@@ -88,5 +88,8 @@ int main(int argc, char* argv[]) {
     }
   }
 
+  // Optional:  Delete all global objects allocated by libprotobuf.
+  google::protobuf::ShutdownProtobufLibrary();
+
   return 0;
 }
